@@ -1,3 +1,9 @@
+2007-04-12  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-man-parser.c:
+	* src/Makefile.am:
+	- Made yelp-man-parser use yelp-debug
+
 2007-04-11  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-error.c:
